# pyburgers

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  burgers.py  mkdocs.yml  namelist.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml
docs/: architecture.md  changelog.md  contributing.md  getting-started.md  index.md  namelist.md  reference.md
models/: __init__.py  dns.py  les.py
models/sgs/: __init__.py  deardorff.py  sgs.py  smagdyn.py  wonglilly.py
pyburgers/: __init__.py  core.py  data_models.py  dns.py  exceptions.py  les.py  schema_namelist.json
pyburgers/physics/: __init__.py
pyburgers/physics/noise/: __init__.py  factory.py  noise.py  noise_fbm.py
pyburgers/physics/sgs/: __init__.py  deardorff.py  sgs.py  sgs_deardorff.py  sgs_smagcon.py  sgs_smagdyn.py  sgs_wonglilly.py  smagcon.py  smagdyn.py  wonglilly.py
pyburgers/utils/: __init__.py  config.py  constants.py  fbm.py  fftw.py  io.py  logging_helper.py  spectral.py  spectral_workspace.py
pyburgers/utils/io/: __init__.py  input.py  logging_helper.py  output.py
scripts/: README.md  build_namelist_docs.py  compare_tke.py  plot_spectra.py  plot_tke.py  plot_velocity.py
tests/: __init__.py  conftest.py  test_derivatives.py  test_fbm.py  test_filter.py  test_input.py  test_integration.py  test_logging.py  test_sgs.py
utils/: __init__.py  config.py  fbm.py  io.py  logging_helper.py  spectral.py
